--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
     <div class="col-sm-4">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <img src=".\anonymous-studio-figure-photography-facial-mask-38275 (2).jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src=".\pexels-photo-336623.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
   </div>
 </div>
