--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     </div>
     <div class="col-sm-4">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <img src=".\pexels-photo-336623.jpg" class="img-responsive margin" style="width:100%" alt="Image">
-    </div>
+      <iframe src="https://playful-moose-203982-dev-ed--c.na35.visual.force.com/apex/Predict" class="img-responsive margin" style="width:100%" alt="Image">
+      </iframe></div>
     <div class="col-sm-4">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       <img src=".\pexels-photo-336623.jpg" class="img-responsive margin" style="width:100%" alt="Image">
