--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
       <iframe src="https://playful-moose-203982-dev-ed--c.na35.visual.force.com/apex/HeatMapMock" class="img-responsive margin" style="width:100%" alt="Image"></iframe>
     </div>
     <div class="col-sm-4">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>Project
+        Build a Cat Rescue App That Recognizes Cat Breeds
+        Use Apex, Lightning components, and Einstein Vision to recognize and classify cat images.</p>
       <iframe src="https://playful-moose-203982-dev-ed--c.na35.visual.force.com/apex/Predict" class="img-responsive margin" style="width:100%" alt="Image">
       </iframe></div>
     <div class="col-sm-4">
