--- a/index.html
+++ b/index.html
@@ -80,9 +80,8 @@
       <iframe src="https://playful-moose-203982-dev-ed--c.na35.visual.force.com/apex/HeatMapMock" class="img-responsive margin" style="width:100%" alt="Image"></iframe>
     </div>
     <div class="col-sm-4">
-      <p>Project
-        Build a Cat Rescue App That Recognizes Cat Breeds
-        Use Apex, Lightning components, and Einstein Vision to recognize and classify cat images.</p>
+      <p2>Project: Build a Cat Rescue App That Recognizes Cat Breeds</p2>
+        <p>Use Apex, Lightning components, and Einstein Vision to recognize and classify cat images.</p>
       <iframe src="https://playful-moose-203982-dev-ed--c.na35.visual.force.com/apex/Predict" class="img-responsive margin" style="width:100%" alt="Image">
       </iframe></div>
     <div class="col-sm-4">
