--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <div class="row">
     <div class="col-sm-4">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <iframe src="https://playful-moose-203982-dev-ed--c.na35.visual.force.com/apex/HeatMapMock" class="img-responsive margin" style="width:100%" alt="Image"></iframe>
+      <iframe src="https://playful-moose-203982-dev-ed--c.na35.visual.force.com/apex/HeatMapMock" class="img-responsive margin" style="width:100%" style="height:100%" alt="Image"></iframe>
     </div>
     <div class="col-sm-4">
       <p2>Project: Build a Cat Rescue App That Recognizes Cat Breeds</p2>
