--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
     <div class="col-sm-4">
       <p2>Project: Build a Cat Rescue App That Recognizes Cat Breeds</p2>
         <p>Use Apex, Lightning components, and Einstein Vision to recognize and classify cat images.</p>
-      <iframe src="https://playful-moose-203982-dev-ed--c.na35.visual.force.com/apex/Predict" class="img-responsive margin" style="width:100%" alt="Image">
+      <iframe src="https://playful-moose-203982-dev-ed--c.na35.visual.force.com/apex/Predict" width="400" height="500">
       </iframe></div>
     <div class="col-sm-4">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <img src=".\pexels-photo-336623.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src=".\pexels-photo-336623.jpg" class="img-responsive margin" width="400" height="500">
     </div>
   </div>
 </div>
