--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">Who Am I?</h3>
-  <img src=".\AAEAAQAAAAAAAAr-AAAAJGE0MzI3NjNmLTU0MjEtNDQ2My1iZTJiLTBhZDFmYWY4YmM2Yw.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="250" height="250">
+  <img src=".\AAEAAQAAAAAAAAr-AAAAJGE0MzI3NjNmLTU0MjEtNDQ2My1iZTJiLTBhZDFmYWY4YmM2Yw.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="25" height="25">
   <h3>I'm an adventurer</h3>
 </div>
 
@@ -77,7 +77,7 @@
   <div class="row">
     <div class="col-sm-4">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <iframe src="https://playful-moose-203982-dev-ed--c.na35.visual.force.com/apex/HeatMapMock" class="img-responsive margin" style="width:100%" style="height:100%" alt="Image"></iframe>
+      <iframe src="https://playful-moose-203982-dev-ed--c.na35.visual.force.com/apex/HeatMapMock" class="img-responsive margin" style= width:"100%" style= height:"100%" alt="Image"></iframe>
     </div>
     <div class="col-sm-4">
       <p2>Project: Build a Cat Rescue App That Recognizes Cat Breeds</p2>
