--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </iframe></div>
     <div class="col-sm-4">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <img src=".\pexels-photo-336623.jpg" class="img-responsive margin" width="4000" height="5000">
+      <img href="" src=".\pexels-photo-336623.jpg" class="img-responsive margin" width="4000" height="5000">
     </div>
   </div>
 </div>
