--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </div>
   <div><p class="item-1">salesforce developer.</p>
 
-<p class="item-2">website designer.</p>
+<p class="item-2">mia loves dad.</p>
 
 <p class="item-3">team player.</p>
 </div>
