--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li><a href="#">about</a></li>
           <li><a href="#">projects</a></li>
           <li><a href="#">services</a></li>
-          <li><a href="#">blog</a></li>
+          <li><a href="#">BLOG</a></li>
           <li><a href="#">contact</a></li>
         </ul>
       </div>
@@ -83,6 +83,9 @@
     <div class="col-sm-4">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       <img href="https://richvanwelch.github.io/f-n-organize/" src=".\pexels-photo-336623.jpg" class="img-responsive margin" width="4000px" height="5000px">
+    <div class="col-sm-4">
+      <p><a href="https://richvanwelch.github.io/f-n-organize/">f(n)Organize</a></p>
+      </div> 
     </div>
   </div>
 </div>
