--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="col-sm-4">
       <p2>Project: Build a Cat Rescue App That Recognizes Cat Breeds</p2>
         <p>Use Apex, Lightning components, and Einstein Vision to recognize and classify cat images.</p>
-      <iframe src="https://playful-moose-203982-dev-ed--c.na35.visual.force.com/apex/HeatMapMock" width="400" height="500">
+      <iframe src="file:///Users/richvanwelch/Documents/GitHub/machine-learning/projects/boston_housing/boston_housing/report.html" width="400" height="500">
       </iframe></div>
     <div class="col-sm-4">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
