--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <li><a href="#">home</a></li>
           <li><a href="#">about</a></li>
           <li><a href="#">projects</a></li>
-          <li><a href="#">services</a></li>
+          <li><a href="#">SERVICES</a></li>
           <li><a href="#">BLOG</a></li>
           <li><a href="#">contact</a></li>
         </ul>
@@ -78,7 +78,7 @@
     <div class="col-sm-4">
       <p2>Project: Build a Cat Rescue App That Recognizes Cat Breeds</p2>
         <p>Use Apex, Lightning components, and Einstein Vision to recognize and classify cat images.</p>
-      <iframe src="file:///Users/richvanwelch/Documents/GitHub/machine-learning/projects/boston_housing/boston_housing/report.html" width="400" height="500">
+      <iframe src="https://github.com/RichVanWelch/Machine-Learning-boston-housing/blob/master/boston_housing.report.ipynb" width="400" height="500">
       </iframe></div>
     <div class="col-sm-4">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
