2nd try to add Boston Housing

--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
       <iframe src="https://github.com/RichVanWelch/Machine-Learning-boston-housing/blob/master/boston_housing.report.ipynb" width="400" height="500">
       </iframe></div>
     <div class="col-sm-4">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <img href="https://richvanwelch.github.io/f-n-organize/" src=".\pexels-photo-336623.jpg" class="img-responsive margin" width="4000px" height="5000px">
+      <p><a href="https://richvanwelch.github.io/f-n-organize/">Boston Housing Machine Learning Project</a></p>
     <div class="col-sm-4">
       <p><a href="https://richvanwelch.github.io/f-n-organize/">f(n)Organize</a></p>
       </div> 
