3rd try to add BOston Housing

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 <a href="#" class="fa fa-yahoo"></a>
 <a href="#" class="fa fa-reddit"></a>
 <a href="#" class="fa fa-rss"></a>
+ <p><a href="https://richvanwelch.github.io/f-n-organize/">Boston Housing Machine Learning Project</a></p>
 </footer>
 
 <script src=".\script.js"></script>
