5 try adding Boston Housing

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <iframe src="https://github.com/RichVanWelch/Machine-Learning-boston-housing/blob/master/boston_housing.report.ipynb" width="400" height="500">
       </iframe></div>
     <div class="col-sm-4">
-      <p><a href="Machine-Learning-boston-housing/boston_housing.report.ipynb">Boston Housing Machine Learning Project</a></p>
+      <p><a href="https://richvanwelch.github.io/Machine-Learning-boston-housing/">Boston Housing Machine Learning Project</a></p>
     <div class="col-sm-4">
       <p><a href="https://richvanwelch.github.io/f-n-organize/">f(n)Organize</a></p>
       </div> 
