--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <footer class="container-fluid bg-4 text-center">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <p>Rich Van Welch </a></p>
-  <a href="#" class="fa fa-facebook"></a>
+ // <a href="#" class="fa fa-facebook"></a>
 <a href="#" class="fa fa-twitter"></a>
 <a href="#" class="fa fa-google"></a>
 <a href="#" class="fa fa-linkedin"></a>
@@ -114,7 +114,7 @@
 <a href="#" class="fa fa-yahoo"></a>
 <a href="#" class="fa fa-reddit"></a>
 <a href="#" class="fa fa-rss"></a>
- 
+ //
 </footer>
 
 <script src=".\script.js"></script>
