--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           <li><a href="#">home</a></li>
           <li><a href="#">about</a></li>
           <li><a href="#">projects</a></li>
-          <li><a href="#">SERVICES</a></li>
-          <li><a href="#">BLOG</a></li>
+          <li><a href="#">services</a></li>
+          <li><a href="#">blog</a></li>
           <li><a href="#">contact</a></li>
         </ul>
       </div>
@@ -44,9 +44,9 @@
    
 
   </div>
-  <div><p class="item-1">salesforce developer.</p>
+  <div><p class="item-1">business development professional.</p>
 
-<p class="item-2">mia loves dad.</p>
+<p class="item-2">machine learning engineer.</p>
 
 <p class="item-3">team player.</p>
 </div>
@@ -94,26 +94,9 @@
 <footer class="container-fluid bg-4 text-center">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <p>Rich Van Welch </a></p>
- // <a href="#" class="fa fa-facebook"></a>
-<a href="#" class="fa fa-twitter"></a>
-<a href="#" class="fa fa-google"></a>
+ 
 <a href="#" class="fa fa-linkedin"></a>
-<a href="#" class="fa fa-youtube"></a>
-<a href="#" class="fa fa-instagram"></a>
-<a href="#" class="fa fa-pinterest"></a>
-<a href="#" class="fa fa-snapchat-ghost"></a>
-<a href="#" class="fa fa-skype"></a>
-<a href="#" class="fa fa-android"></a>
-<a href="#" class="fa fa-dribbble"></a>
-<a href="#" class="fa fa-vimeo"></a>
-<a href="#" class="fa fa-tumblr"></a>
-<a href="#" class="fa fa-vine"></a>
-<a href="#" class="fa fa-foursquare"></a>
-<a href="#" class="fa fa-stumbleupon"></a>
-<a href="#" class="fa fa-flickr"></a>
-<a href="#" class="fa fa-yahoo"></a>
-<a href="#" class="fa fa-reddit"></a>
-<a href="#" class="fa fa-rss"></a>
+
  //
 </footer>
 
