--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <h3 class="margin">Current Projects</h3><br>
 <div class="row">
 <div class="col-sm-4">
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<p>Machine Learning Projects that will blow your mind</p>
 <iframe src="https://playful-moose-203982-dev-ed--c.na35.visual.force.com/apex/HeatMapMock" class="img-responsive margin" style= width:"100%" style= height:"100%" alt="Image"></iframe>
 </div>
 <div class="col-sm-4">
@@ -82,7 +82,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <p>Rich Van Welch </a></p>
 <a href="#" class="fa fa-linkedin"></a>
-//
+
 </footer>
 <script src=".\script.js"></script>
 </body>
