--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
 <p><a href="https://richvanwelch.github.io/Machine-Learning-boston-housing/">Boston Housing Machine Learning Project</a></p>
 <div class="col-sm-4">
 <p><a href="https://richvanwelch.github.io/f-n-organize/">f(n)Organize</a></p>
+{
+    "version_major": 2,
+    "version_minor": 0,
+    "state": {}
+}
 </div>
 </div>
 </div>
