--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 <li><a href="#">home</a></li>
 <li><a href="#">about</a></li>
 <li><a href="#">projects</a></li>
-<li><a href="#">services</a></li>
-<li><a href="#">blog</a></li>
+<li><a href="#">resume</a></li>
 <li><a href="#">contact</a></li>
 </ul>
 </div>
@@ -51,7 +50,7 @@
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
 <h3 class="margin">Understanding my passion</h3>
-<p>There's something to be said about working with passionate business owners that truly love what they do. I’m no different. I started my business because I honestly enjoy coming to work every day to create something beautiful that has the ability to impact others.</p>
+<p>I am passionate about identifying and delivering the right business solution for each client. I have a keen business orientation with an understanding of how technology can be effectively applied to meet a variety of business needs. I thrive in challenging environments, complete goals on time, practice strong attention to detail, persevere through tough obstacles, and I do not get discouraged. I work well with teammates with little supervision. I am a master of conceptional sales, lead generation, product demos and presentations, contracts and negotiaions and closing deals.</p>
 <a href="#" class="btn btn-default btn-lg">
 <span class="glyphicon"></span>connect with me
 </a>
@@ -73,11 +72,6 @@
 <p><a href="https://richvanwelch.github.io/Machine-Learning-boston-housing/">Boston Housing Machine Learning Project</a></p>
 <div class="col-sm-4">
 <p><a href="https://richvanwelch.github.io/f-n-organize/">f(n)Organize</a></p>
-{
-    "version_major": 2,
-    "version_minor": 0,
-    "state": {}
-}
 </div>
 </div>
 </div>
@@ -86,7 +80,7 @@
 <footer class="container-fluid bg-4 text-center">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <p>Rich Van Welch </a></p>
-<a href="#" class="fa fa-linkedin"></a>
+<a href="https://www.linkedin.com/in/richardvanwelch/" class="fa fa-linkedin"></a>
 
 </footer>
 <script src=".\script.js"></script>
